--- a/views/telepresence.pug
+++ b/views/telepresence.pug
@@ -12,7 +12,7 @@ block scripts
 		image-rendering: -moz-crisp-edges;          /* Firefox                        */
 		image-rendering: -o-crisp-edges;            /* Opera                          */
 		image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
-		image-rendering: pixelated; /* Chrome */
+		image-rendering: pixelated;                 /* Chrome                         */
 		image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
 		-ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
 		}
@@ -23,22 +23,10 @@ block content
 		div.jumbotron.jumbotron-fluid
 			h1 Telepresence control
 		div.container
-			img#screen.img-fluid(src="http://localhost:8080/stream?topic=/telepresence/image")
+			// TODO
+			img#screen.img-fluid(src="http://192.168.2.102:8080/stream?topic=/telepresence/image")
 		div.container
 			div.btn-group.btn-group-lg.d-flex
 				button.btn.btn-flex.btn-primary#left Left
 				button.btn.btn-flex.btn-danger#cancel Cancel goal
 				button.btn.btn-flex.btn-primary#right Right
-		div.container
-	// img#grid(src="http://localhost:8080/stream?topic=/telepresence/grid")
-	//-
-		div.jumbotron.jumbotron-fluid
-			h1 Telepresence control
-		div.row
-			div.col-md-6
-				img#screen.img-fluid(src="http://localhost:8080/stream?topic=/telepresence/image")
-				div#invalid_pos.alert.alert-danger.hidden(role="alert")
-					h5 Clicked position is invalid
-				button#cancel_goal.btn.btn-primary.mb-2 Cancel goal
-			div.col-md-6
-				img#grid.img-fluid(src="http://localhost:8080/stream?topic=/telepresence/grid")
