--- a/views/telepresence.pug
+++ b/views/telepresence.pug
@@ -24,7 +24,7 @@ block content
 			h1 Telepresence control
 		div.container
 			// TODO
-			img#screen.img-fluid(src="http://192.168.2.102:8080/stream?topic=/telepresence/image")
+			img#screen.img-fluid(src="http://localhost:8080/stream?topic=/telepresence/image")
 		div.container
 			div.btn-group.btn-group-lg.d-flex
 				button.btn.btn-flex.btn-primary#left Left
